--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "indirect_GWAS"
+name = "indirect_gwas"
 version = "0.0.1"
 requires-python = ">=3.10"
 readme = "README.md"
@@ -16,5 +16,5 @@ build-backend = "setuptools.build_meta"
 test = ["pytest", "statsmodels", "flake8"]
 
 [project.scripts]
-indirect-GWAS = "indirect_GWAS.cli:main"
-compute-feature-partial-covariance = "indirect_GWAS.cli:compute_feature_partial_covariance"
+indirect-gwas = "indirect_gwas.cli:main"
+compute-feature-partial-covariance = "indirect_gwas.cli:compute_feature_partial_covariance"
