--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,28 @@
 [project]
 name = "indirect_gwas"
-version = "0.0.1"
+version = "0.0.2"
 requires-python = ">=3.10"
 readme = "README.md"
-dependencies = ["numpy", "pandas", "scipy", "xarray"]
 authors = [
     {name = "Michael Zietz", email = "michael.zietz@gmail.com"}
 ]
 
+[tool.setuptools]
+packages = ["indirect_gwas"]
+
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "pybind11>=2.6.1"]
 build-backend = "setuptools.build_meta"
 
 [project.optional-dependencies]
-test = ["pytest", "statsmodels", "flake8"]
+test = ["pytest", "statsmodels", "flake8", "pandas", "scipy"]
 
 [project.scripts]
 indirect-gwas = "indirect_gwas.cli:main"
 compute-feature-partial-covariance = "indirect_gwas.cli:compute_feature_partial_covariance"
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+addopts = [
+    "--import-mode=importlib",
+]
