--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "1.1.12"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "igwas"
+crate-type = ["lib", "cdylib"]
 
 [dependencies]
 csv = "1.3.0"
@@ -18,6 +21,7 @@ rayon = "1.8.0"
 csv-sniffer = "0.3.1"
 crossbeam-channel = "0.5.11"
 zstd = "0.13.0"
+pyo3 = "0.21.0"
 
 
 [dev-dependencies]
