--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "zstandard>=0.23.0",
 ]
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">= 3.10"
 
 [build-system]
 requires = ["maturin>=1.2,<2.0"]
@@ -21,9 +21,16 @@ build-backend = "maturin"
 managed = true
 dev-dependencies = [
     "pytest>=8.3.2",
+    "ruff>=0.6.2",
 ]
 
 [tool.maturin]
 python-source = "python"
 module-name = "igwas._lowlevel"
 features = ["pyo3/extension-module"]
+
+[tool.uv]
+dev-dependencies = [
+    "ruff>=0.6.2",
+    "pytest>=8.3.2",
+]
